# Turtlebot-3-Navigation

./: .gitignore  LICENSE  README.md
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/include/controller/: ControllerConfig.h
catkin_ws/devel/include/turtlebot_msgs/: GoalPose.h  Trajectory.h
catkin_ws/devel/lib/controller/: controller_node
catkin_ws/devel/lib/cost_map/: cost_map_node
catkin_ws/devel/lib/local_navigator/: local_navigator_node
catkin_ws/devel/lib/localization/: odom_correction_node
catkin_ws/devel/lib/pkgconfig/: bringup.pc  controller.pc  cost_map.pc  global_planner.pc  local_navigator.pc  local_planner.pc  localization.pc  odom_ekf.pc  turtlebot_msgs.pc
catkin_ws/src/bringup/: CMakeLists.txt  package.xml
catkin_ws/src/bringup/launch/: full_sim.launch  real_robot.launch
catkin_ws/src/bringup/rviz/: tbot3.rviz
catkin_ws/src/controller/: CMakeLists.txt  package.xml
catkin_ws/src/controller/cfg/: controller.cfg
catkin_ws/src/controller/src/: controller.cpp  (+8 more)
catkin_ws/src/cost_map/: CMakeLists.txt
catkin_ws/src/global_planner/: CMakeLists.txt  package.xml
catkin_ws/src/local_navigator/: CMakeLists.txt
catkin_ws/src/local_planner/: CMakeLists.txt  package.xml
catkin_ws/src/localization/: CMakeLists.txt  package.xml
catkin_ws/src/odom_ekf/: CMakeLists.txt
catkin_ws/src/simulation/: package.xml
catkin_ws/src/turtlebot_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/turtlebot_msgs/msg/: GoalPose.msg  Trajectory.msg  Tune.msg  cntrl_acc.msg  cntrl_ang_vel.msg  cntrl_lin_vel.msg  cntrl_pos.msg  cntrl_vel.msg
(+98 files in other folders)
